--- a/1.html
+++ b/1.html
@@ -12,5 +12,9 @@
         <li><a href="2.html" target="_blank"><img src="https://t1.daumcdn.net/cfile/tistory/2536954357884B6335" width="2%">안디다스</a></li>
         <li><a href="3.html" target="_blank"><img src="https://blog.kakaocdn.net/dn/CcKC2/btqxeJ1aEYY/K0BzhdkR6qu35GgrVkkEU0/img.jpg" width="2%">뉸발란스</a>
     </ul>
+    <p>ABOUT NIKE
+        Our mission is what drives us to do everything possible to expand human potential.<br> We do that by creating groundbreaking sport innovations, by making our products more sustainably,<br> by building a creative and diverse global team and by making a positive impact in communities where we live and work.<Br>
+        
+        Based in Beaverton, Oregon, NIKE, Inc.<Br> includes the Nike, Converse, and Jordan brands.</p>
 </body>
 </html>
